Docs: Adding api docs for DELETE /items/:id endpoint
